# reu-2026-driver-path-choice

./: .gitignore  README.md  VALIDATION.md  broward_check.html  config.example.yaml  config.yaml  parquet_to_shapefiles.py  pyproject.toml  sample.csv  visualize_134055.py
data/: fdot_counties.txt
data/DOTShapesFGDB.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtablx  a00000004.spx  a00000005.gdbtable  (+156 more)
deliverables/: README.md  generate_html_maps.py
docs/: 2026-06-18-fmm-investigation.md  path_choice_metric_design.md  phase2_driver_timeline.md  phase2_graph_comparison.md  phase2_monthly_attributed_graphs.md  phase3_route_choice_change_index.md
roadnet/: __init__.py  config.py  conflation.py  driver_timeline.py  fdot.py  fmm_pipeline.py  graph_comparisons.py  html_assets.py  mapillary.py  monthly_attributed_graphs.py  osm.py  pipeline.py  route_choice_change_index.py  speed.py
scripts/: build_driver_1003_monthly_graphs.py  build_driver_1003_route_choice_change_index.py  build_driver_timeline.py  build_monthly_attributed_graphs.py  compare_driver_1003_monthly_graphs.py
tests/: debug_snap.py  inspect_trip.py  sanity_check.py  test_driver_timeline.py  test_fmm_result_lifetime.py  test_graph_comparisons.py  test_html_assets.py  test_monthly_attributed_graphs.py  test_monthly_graphs.py  test_route_choice_change_index.py  test_snap.py  test_speed.py  test_stmatch.py  test_trip.py  visualize_snap.py
(+65 files in other folders)
